api_versioned_docs/version-12.1.2.1/avalonia/controls/treedatagridcolumns.mdx
---
title: 'TreeDataGridColumns'
hide_title: true
slug: '/avalonia/controls/treedatagridcolumns'
uid: 'Avalonia.Controls.TreeDataGridColumns'
commentId: 'T:Avalonia.Controls.TreeDataGridColumns'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TreeDataGridColumns Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Represents a collection of columns in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</div>

<div className="apiref-page__signature">

```csharp
public class TreeDataGridColumns
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> Collection&lt;TreeDataGridColumn&gt; <span className="apiref-page__relation-separator">-&gt;</span> TreeDataGridColumns
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> IEnumerable&lt;TreeDataGridColumn&gt;, IReadOnlyCollection&lt;TreeDataGridColumn&gt;, IReadOnlyList&lt;TreeDataGridColumn&gt;, IEnumerable, INotifyCollectionChanged, INotifyPropertyChanged
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [TreeDataGridColumns](#uid-926b843f50) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-926b843f50"></span>

### TreeDataGridColumns Constructor

```csharp
public TreeDataGridColumns()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [AddRange](#uid-a7c39dd24a) | No summary available. |
| [Move](#uid-c374b9fc2b) | Moves the column at the specified index to a new location in the collection. |

<section className="apiref-page__member-entry">

<span id="uid-a7c39dd24a"></span>

### AddRange Method

```csharp
public void AddRange(System.Collections.Generic.IEnumerable<Avalonia.Controls.TreeDataGridColumn> items)
```

#### Parameters

`items` System.Collections.Generic.IEnumerable&lt;[Avalonia.Controls.TreeDataGridColumn](xref:Avalonia.Controls.TreeDataGridColumn)&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-c374b9fc2b"></span>

### Move Method

Moves the column at the specified index to a new location in the collection.

```csharp
public void Move(int oldIndex, int newIndex)
```

#### Parameters

`oldIndex` int

The zero-based index of the column to move.


`newIndex` int

The zero-based index specifying the new location of the column.


#### Remarks

Raises a single [System.Collections.Specialized.NotifyCollectionChangedAction.Move](xref:System.Collections.Specialized.NotifyCollectionChangedAction.Move) collection change
notification. Does nothing if `oldIndex` and
`newIndex` are equal.

</section>

## Events

| Name | Description |
| --- | --- |
| [CollectionChanged](#uid-a20de62ba1) | No summary available. |
| [PropertyChanged](#uid-4c33232fe3) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-a20de62ba1"></span>

### CollectionChanged Event

```csharp
public event System.Collections.Specialized.NotifyCollectionChangedEventHandler CollectionChanged
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-4c33232fe3"></span>

### PropertyChanged Event

```csharp
public event System.ComponentModel.PropertyChangedEventHandler PropertyChanged
```

</section>

</ApiRefPage>

